--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"$schema": "https://raw.githubusercontent.com/atampy25/simple-mod-framework/main/Mod%20Manager/src/lib/manifest-schema.json",
 	"version": "0.1.0",
-	"id": "YourPreferredAlias.AnIDForTheMod",
-	"name": "Test Mod",
-	"description": "A truly amazing mod",
-	"authors": ["Your Preferred Alias"],
+	"id": "Tumbler.CakeTopper",
+	"name": "Move Cake",
+	"description": "A truly amazing cake moving mod",
+	"authors": ["Tumbler"],
 	"frameworkVersion": "2.25.1"
 }
