chore: fixing for release pre choice

--- a/manifest.json
+++ b/manifest.json
@@ -2,19 +2,11 @@
 	"$schema": "https://raw.githubusercontent.com/atampy25/simple-mod-framework/main/Mod%20Manager/src/lib/manifest-schema.json",
 	"version": "0.2.0",
 	"id": "Tumbler.CakeTopper",
-	"name": "Move Cake",
-	"description": "A truly amazing cake moving mod",
+	"name": "Remove Cake",
+	"description": "A truly amazing cake removing mod",
 	"authors": ["Tumbler"],
 	"frameworkVersion": "2.33.20",
-	"contentFolders": [],
-	"options": [
-		{
-			"name": "Remove the Cake",
-			"type": "checkbox",
-			"tooltip": "Deletes every trace of  its existence",
-			"enabledByDefault": true,
-			"contentFolders": ["Options/delete"]
-		}
-	],
+	"contentFolders": ["Options/delete"],
+	"options": [],
 	"updateCheck": "https://github.com/NeetBux-Hash/Tumbler.CakeRelocate/releases/latest/download/updates.json"
 }
