feat: Final release
Needs cake rotation tuning

--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
 	"$schema": "https://raw.githubusercontent.com/atampy25/simple-mod-framework/main/Mod%20Manager/src/lib/manifest-schema.json",
 	"version": "0.1.0",
 	"id": "Tumbler.CakeTopper",
-	"name": "Re/Move Cake",
-	"description": "A truly amazing cake re/moving mod",
+	"name": "ReloCake",
+	"description": "A truly amazing cake moving mod",
 	"authors": ["Tumbler"],
 	"frameworkVersion": "2.25.1",
 	"contentFolders": [],
@@ -17,9 +17,10 @@
 		},
 		{
 			"group": "The Cake at Hand",
-			"name": "Cake Relocation",
+			"name": "ReloCake it",
 			"type": "select",
-			"tooltip": "Moves the cake somewhere else",
+			"tooltip": "Moves the cake slightly to the side instead",
+			"enabledByDefault": true,
 			"contentFolders": ["Options/move"]
 		}
 	]
