--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"version": "0.5.1",
 	"id": "Tumbler.CakeTopper",
 	"name": "ReloCake",
-	"description": "A truly amazing cake moving mod",
+	"description": "A truly amazing cake (re)moving mod",
 	"authors": ["Tumbler"],
 	"frameworkVersion": "2.33.20",
 	"contentFolders": [],
