--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,16 @@
 			"tooltip": "Moves the cake slightly to the side instead",
 			"enabledByDefault": true,
 			"contentFolders": ["Options/move"]
+		},
+		{
+			"group": "The Cake at Hand",
+			"name": "Test",
+			"type": "select",
+			"tooltip": "Moves the cake less noticeably to the side. Not sure if it's intel safe compatible. Feel free to confirm on nexus :)",
+			"enabledByDefault": false,
+			"contentFolders": ["Options/test"]
 		}
+
 	],
 	"updateCheck": "https://github.com/NeetBux-Hash/Tumbler.CakeRelocate/releases/latest/download/updates.json"
 }
