Squashed commit of the following:
commit e2df2719de3f60bf441ea48638c7ab06f25e034c
Author: NeetBux-Hash <anassbenmalik007@gmail.com>
Date:   Wed Oct 16 03:55:42 2024 +0200

    Manifest refinemnt

commit f58952bfcfc938318a653bfe353e9b1490df022f
Author: NeetBux-Hash <anassbenmalik007@gmail.com>
Date:   Wed Oct 16 03:53:57 2024 +0200

    X refinements

    Changed X but dont see anytging. Double checking
    Looks good. All set. Might need rotation values changed. Not worth it

commit 0310ae0f150a9a88713cbd4be0900b19e1bb5faa
Author: NeetBux-Hash <anassbenmalik007@gmail.com>
Date:   Wed Oct 16 03:46:21 2024 +0200

    Good Y

    Y is all set. Now bumping X values a bit more. Also doing some manifest adjustments

commit fa87872d6b471d2a51ab382d1cfca736c5a262af
Author: NeetBux-Hash <anassbenmalik007@gmail.com>
Date:   Wed Oct 16 03:38:13 2024 +0200

    Going positive

    Too much. Revert to negative and move closer to positive value

commit 90b5c81da509ec2717eb390a0b6e22b42e250ae0
Author: NeetBux-Hash <anassbenmalik007@gmail.com>
Date:   Wed Oct 16 03:35:11 2024 +0200

    Y bump

    Bigger Y bump. Wrong direction

commit e997ff29488f9054eabdfa41e54c267b299d83f2
Author: NeetBux-Hash <anassbenmalik007@gmail.com>
Date:   Wed Oct 16 03:31:06 2024 +0200

    Testing Y in combination

    Testing Y now. Needs a bit more of one

commit 1ba52ddb5bef29043796e7d202002e769c51bf70
Author: NeetBux-Hash <anassbenmalik007@gmail.com>
Date:   Wed Oct 16 03:26:33 2024 +0200

    Postioning X

    X is closer or further. Y is to the side
    Testing slightly stronger x values

commit 9d37385071d49b6452b1af51573b90ea69adaf58
Author: NeetBux-Hash <anassbenmalik007@gmail.com>
Date:   Wed Oct 16 03:16:41 2024 +0200

    increment

    Going to -0.08049200147390365 from -0,06
    Nothing noticeable. Might have to dabble in both x and y values

--- a/manifest.json
+++ b/manifest.json
@@ -10,19 +10,28 @@
 	"options": [
 		{
 			"group": "The Cake at Hand",
-			"name": "Remove the Cake",
+			"name": "Tasteless, Traceless",
 			"type": "select",
-			"tooltip": "Deletes every trace of its existence",
+			"tooltip": "Deletes the cake as if it never existed",
 			"contentFolders": ["Options/delete"]
 		},
 		{
 			"group": "The Cake at Hand",
 			"name": "ReloCake it",
 			"type": "select",
-			"tooltip": "Moves the cake slightly to the side instead",
+			"tooltip": "Moves the cake substantially to the side instead",
 			"enabledByDefault": true,
 			"contentFolders": ["Options/move"]
+		},
+		{
+			"group": "The Cake at Hand",
+			"name": "A little Push",
+			"type": "select",
+			"tooltip": "Moves the cake less noticeably to the side.",
+			"enabledByDefault": false,
+			"contentFolders": ["Options/test"]
 		}
+
 	],
 	"updateCheck": "https://github.com/NeetBux-Hash/Tumbler.CakeRelocate/releases/latest/download/updates.json"
 }
